--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nextcss/material-colors",
-  "version": "0.1.1-beta",
+  "version": "0.1.2-beta",
   "description": "material-colors module for Next.css.",
   "license": "MIT",
   "main": "dist/material-colors.css",
@@ -29,9 +29,9 @@
   "homepage": "https://next-css.com",
   "scripts": {
     "build": "npm run build:dist && npm run build:test",
-    "watch": "node-sass --watch --output-style compact src/material-colors.scss dist/material-colors.css",
-    "build:dist": "node-sass --output-style compressed src/material-colors.scss dist/material-colors.css",
-    "build:test": "node-sass --output-style compact src/material-colors.scss test/material-colors.css"
+    "watch": "node-sass --watch --output-style compact --output test/ src/",
+    "build:dist": "node-sass --output-style compressed --output dist/ src/",
+    "build:test": "node-sass --output-style compact --output test/ src/"
   },
   "devDependencies": {
     "node-sass": "^6.0.1"
