--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "bugs": {
     "url": "https://github.com/nextcss/material-colors/issues"
   },
-  "homepage": "https://next-css.com",
+  "homepage": "git+https://github.com/nextcss/material-colors.git",
   "scripts": {
     "build": "npm run build:dist && npm run build:test",
     "watch": "node-sass --watch --output-style compact --output test/ src/",
